# hiyoshi_bot

./: .gitignore  README.md  bot.py  debug_matcher.py  pyproject.toml  requirements.txt  songs.txt  verify_logic.py  verify_ocr.py
src/: matcher.py  ocr.py  sheets.py  ui.py
tests/: test_role_verification.py
